--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <title>黃子剛的首頁</title>
 </head>
 
+
+
 <body>
 <p align="center"><img src="R6.jpg" alt="愛騎車" width="800" height="600"/></p>
 <h1><p align="center">&nbsp&nbsp&nbsp&nbsp&nbsp我的興趣</p></h1>
@@ -19,7 +21,7 @@
 <p align="center"><a href="http://www.comicbus.com/html/103.html">海賊王</a><br /></p>
 <p align="center"><a href="http://www.comicbus.com/html/9418.html">七原罪</a><br /></p>
 <p align="center"><a href="http://www.comicbus.com/html/10406.html">一拳超人</a><br /></p>
-
+<video src="media/001.mp3" autoplay loop  />
 
 </body>
 </html>
