--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>黃子剛的首頁</title>
+<body bgcolor="#444444"  text="#ffffff"></body>
 </head>
 
 
