--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 
 <body>
-<p align="center"><img src="R6.jpg" alt="愛騎車" width="800" height="600"/></p>
+<p align="center"><img src="豬.jpg"  width="1000" height="562"/></p><br /><br />
+<p align="center"><img src="R6.jpg" alt="愛騎車" width="704" height="493"/></p><br /><br />
 <h1><p align="center">&nbsp&nbsp&nbsp&nbsp&nbsp我的興趣</p></h1>
 <ul type="circle">
 <p align="center">。騎機車</p>
@@ -22,6 +23,9 @@
 <p align="center">﹂<a href="http://www.comicbus.com/html/103.html">海賊王</a><br /></p>
 <p align="center">﹂<a href="http://www.comicbus.com/html/9418.html">七原罪</a><br /></p>
 <p align="center">&nbsp&nbsp&nbsp﹂<a href="http://www.comicbus.com/html/10406.html">一拳超人</a><br /></p>
+<p align="center">﹂<a href="http://www.comicbus.com/html/12709.html">七原罪</a><br /></p><br /><br />
+<p align="center">。作業</p>
+<p align="center">﹂<a href="http://form1.html">表單設計</a><br /></p>
 <video src="media/001.mp3" autoplay loop  />
 
 </body>
