--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <p align="center">&nbsp&nbsp&nbsp﹂<a href="http://www.comicbus.com/html/10406.html">一拳超人</a><br /></p>
 <p align="center">﹂<a href="http://www.comicbus.com/html/12709.html">七原罪</a><br /></p><br /><br />
 <p align="center">。作業</p>
-<p align="center">﹂<a href="http://form1.html">表單設計</a><br /></p>
+<p align="center">﹂<a href="form1.html">表單設計</a><br /></p>
+                    <a href="/sub/form1.html"></a>
 <video src="media/001.mp3" autoplay loop  />
 
 </body>
