--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 <p align="center">。作業</p>
 <p align="center">﹂<a href="form1.html">表單設計</a><br /></p>
                     <a href="/sub/form1.html"></a>
+<p align="center">﹂<a href="contactme.html">樣板 - 表單設計</a><br /></p>
+                    <a href="/sub/contactme.html"></a>
 <video src="media/001.mp3" autoplay loop  />
 
 </body>
